# api-rest-ESD

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: init.sql
src/: db.rs  error.rs  main.rs  routes.rs  utils.rs
src/controllers/: cita_controller.rs  diagnostico_controller.rs  especialidad_controller.rs  medico_controller.rs  mod.rs  paciente_controller.rs
src/models/: cita.rs  diagnostico.rs  especialidad.rs  medico.rs  mod.rs  paciente.rs
src/repositories/: cita_repo.rs  diagnostico_repo.rs  especialidad_repo.rs  medico_repo.rs  mod.rs  paciente_repo.rs
src/services/: cita_service.rs  diagnostico_service.rs  especialidad_service.rs  medico_service.rs  mod.rs  paciente_service.rs
